@startuml DomainModel
package RequirementsSpecificationAgg {

    class RequirementsSpecification {
        +id: SpecName
        +description: Description
        +jarFile: JarFile
    }

    class Description {
        +name: String
    }

    class JarFile {
        + jarFilePath: String
    }
    class SpecName {
        +name: String
    }

    RequirementsSpecification --> Description
    RequirementsSpecification --> JarFile
    RequirementsSpecification --> SpecName

}
package JobApplicationAgg {
    class JobApplication {
        +id: Long
        +requirementsEvaluation: RequirementsEvaluation
        +files: List<File>
    }

    class File
    {
        +id : long
        +path : FilePath
        +type : FileType
    }

    class FilePath {
        +path: String
    }

    enum FileType
    {
        CandidateInterviewAnswers
        CandidateRequirementsAnswers
    }

    class Requirements
    {
        +justification : RequirementsJustification
        +evaluation : RequirementsEvaluation
    }

    class RequirementsJustification
    {
        +justification : String
    }

    enum RequirementsEvaluation {
        Pending
        Accepted
        Rejected
    }
    JobApplication --> Requirements
    JobApplication --> File

    Requirements --> RequirementsJustification
    Requirements --> RequirementsEvaluation

    File --> FilePath
    File --> FileType
}
package JobOpeningAgg {

    class JobOpening {
        +id: JobReference
        +recruitmentProcess: RecruitmentProcess
    }
    class RecruitmentProcess {
        +id: int
        +status: RecruitmentProcessStatus
        +phases: List<Phase>
    }

    class Phase {
        +id: Long
        +name: PhaseName
        +status: PhaseStatus
    }

    enum PhaseName {
            APPLICATION,
            SCREENING,
            INTERVIEWS,
            ANALYSIS,
            RESULT
    }

    enum PhaseStatus {
        Open
        Closed
    }

    enum RecruitmentProcessStatus {
        Uninitiated
        In Process
        Finished
    }

    JobOpening --> RecruitmentProcess
    RecruitmentProcess --> RecruitmentProcessStatus
    RecruitmentProcess --> Phase : "Is separated into"
    Phase --> PhaseName
    Phase --> PhaseStatus
}

JobOpening --> RequirementsSpecification
JobApplication --> JobOpening : Refers To
@enduml
